update desain proses

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="#features">App Features</a></li>
           <li><a href="#design">Design Process</a></li>
+          <li><a href="#features">App Features</a></li>
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#contact">Contact Us</a></li>
 
@@ -110,7 +110,7 @@
               <li class="list-group-item">Need Finding and Problem</li>
             </ul> -->
             <div class="card-body">
-              <button type="button" class="btn btn-primary btn-sm">View More</button>
+              <a href="findProblem.html"><button type="button" class="btn btn-primary btn-sm ">View More</button></a>
             </div>
           </div>
         </div>
