--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <h5 class="card-title">Journey Map</h5>
             </div>
             <div class="card-body">
-              <button type="button" class="btn btn-primary btn-sm">View More</button>
+              <a href="journeyMap.html"><button type="button" class="btn btn-primary btn-sm">View More</button></a>
             </div>
           </div>
         </div>
@@ -133,7 +133,7 @@
               <h5 class="card-title">Lo-Fi Prototype</h5>
             </div>
             <div class="card-body">
-              <button type="button" class="btn btn-primary btn-sm">View More</button>
+              <a href="loFi.html"><button type="button" class="btn btn-primary btn-sm">View More</button></a>
             </div>
           </div>
         </div>
@@ -144,7 +144,7 @@
               <h5 class="card-title">Screen Flow</h5>
             </div>
             <div class="card-body">
-              <button type="button" class="btn btn-primary btn-sm">View More</button>
+              <a href="screenFlow.html"><button type="button" class="btn btn-primary btn-sm">View More</button></a>
             </div>
           </div>
         </div>
@@ -156,7 +156,7 @@
               <h5 class="card-title">Hifi Prototype</h5>
             </div>
             <div class="card-body">
-              <button type="button" class="btn btn-primary btn-sm">View More</button>
+              <a href="hiFi.html"><button type="button" class="btn btn-primary btn-sm">View More</button></a>
             </div>
           </div>
         </div>
@@ -168,7 +168,7 @@
               <h5 class="card-title">Usability Evaluation </h5>
             </div>
             <div class="card-body">
-              <button type="button" class="btn btn-primary btn-sm">View More</button>
+              <a href="eval.html"><button type="button" class="btn btn-primary btn-sm">View More</button></a>
             </div>
           </div>
         </div>
